fix: restore valid index html

--- a/client/index.html
+++ b/client/index.html
@@ -1,1 +1,19 @@
-<!doctype html>`n<html lang="en">`n  <head>`n    <meta charset="UTF-8" />`n    <meta name="viewport" content="width=device-width, initial-scale=1.0" />`n    <title>Memorylife</title>`n    <link rel="icon" type="image/png" href="/favicon.png" />`n    <link rel="preconnect" href="https://fonts.googleapis.com" />`n    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />`n    <link`n      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"`n      rel="stylesheet"`n    />`n  </head>`n  <body class="bg-slate-50">`n    <div id="root"></div>`n    <script type="module" src="/src/main.jsx"></script>`n  </body>`n</html>`n
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Memorylife</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body class="bg-slate-50">
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
+</html>
