--- a/client/public/legacy/henry-ford/index.html
+++ b/client/public/legacy/henry-ford/index.html
@@ -41,6 +41,13 @@
         </div>
       </header>
 
+      <div class="back-home">
+        <a class="back-home-button" href="/">
+          <span class="lang-en">← Back to Memorylife</span>
+          <span class="lang-ru">← Назад на Memorylife</span>
+        </a>
+      </div>
+
       <main>
         <section class="hero" aria-labelledby="hero-title">
           <div class="hero-main">
